[tool.poetry]
name = "griditor"
version = "0.1.0"
description = "An interactive CLI tool to work with 2D data"
authors = ["Ronan Dowling <rd@ronandowling.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.6"
psutil = "^5.9.1"
textual = "^0.1.18"
pandas = "^1.4.3"
textual-inputs = "~=0.2.6"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"
poetry = "^1.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "griditor.app:run"
